namespace cpp base

struct BaseData{
  1: optional string log_id
  2: optional string from_service
  3: optional string to_service
  4: optional string to_method
  5: optional string locate

  6: optional i32 code
  7: optional string message
}
